# ruberry

./: package.json  pnpm-lock.yaml  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  build.rs  diesel.toml  tauri.conf.json
src-tauri/migrations/2024-07-19-031341_create_transactions/: up.sql
src-tauri/src/: commands.rs  date.rs  db.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs
src/lib/: invoke.ts
src/lib/components/: ExpensesTable.svelte  Money.svelte  TransactionsTable.svelte
src/lib/components/ui/data-table/: data-table-actions.svelte  data-table.svelte  index.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/transactions/: +page.svelte
