[package]
name = "ruberry"
version = "0.0.0"
description = "A Tauri App"
authors = ["Johann Homonnai <j.homonnai@icloud.com>"]
edition = "2021"

[lib]
name = "ruberry_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.63"
dirs = "5.0.1"
diesel = { version = "2.2", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
  "chrono",
] }
chrono = { version = "0.4.38", features = ["serde"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.35.0"
diesel_migrations = { version = "2.2", features = ["sqlite"] }
csv = "1.3.0"
color-eyre = "0.6.3"
human-panic = "2.0.0"
libc = "0.2.155"
better-panic = "0.3.0"
strip-ansi-escapes = "0.2.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
